# codex_less

./: README.md  pnpm-lock.yaml
codex-rs/: Cargo.toml
codex-rs/shell-tool-mcp/: .gitignore  Cargo.toml  README.md
codex-rs/shell-tool-mcp/src/: bash_selection.rs  constants.rs  main.rs  os_release.rs  platform.rs  types.rs
